<resources>
    <string name="app_name">DemoCritics</string>

    <string name="action_settings">Settings</string>

    <string name="titleIndex">Indice</string>
    <string name="titleMenu">Menu</string>

    <string name="title_dialogNoConnection">No hay conexión a Internet.</string>
    <string name="text_dialogNoConnection">Es necesaria una conexión a Internet. \n\nCompruebe su conexión. </string>

    <string name="btnPrograms">Programas\nPolíticos</string>
    <string name="btnTopics">Categorías</string>
    <string name="btnProposals">Discusión de\nPropuestas</string>
    <string name="btnCollaborate">Propuestas en\nDesarrollo</string>

    <string name="drawer_open">Menu Abierto!</string>
    <string name="drawer_close">Menu Cerrado!</string>

    <string name="anonymousUser">Anónimo</string>

    <string name="textSubsections">Subsecciones:</string>

    <string name="userDialogTitle">Cambia tu nombre de usuario.</string>
    <string name="userDialogText">Escribe aqui tu nuevo nombre de usuario:</string>

    <string-array name="MenuEntries">
        <item>Inicio</item>
        <item>Programas</item>
        <item>Categorías</item>
        <item>Discusión de\nPropuestas</item>
        <item>Propuestas en\nDesarrollo</item>
        <item>Favoritos</item>
    </string-array>


    <string-array name="CategoriesEntries">
        <item>#Sanidad</item>
        <item>#Educacion</item>
        <item>#Empleo</item>
        <item>#Vivienda</item>
        <item>#Impuestos</item>
        <item>#Cultura</item>
        <item>#Otros</item>
    </string-array>

    <string name="categoryHealth">Sanidad</string>
    <string name="categoryEducation">Educación</string>
    <string name="categoryEmployment">Empleo</string>
    <string name="categoryHomes">Vivienda</string>
    <string name="categoryTaxes">Impuestos</string>
    <string name="categoryCulture">Cultura</string>
    <string name="categoryOthers">Otros...</string>

    <string name="hint_newProposalsTitle">Título de tu propuesta: (Obligatorio)</string>
    <string name="hint_newProposalsCategory">Selecciona una categoría (Obligatorio)</string>
    <string name="hint_newProposalsProposal">Escribe aqui tu propuesta: \n (Obligatorio)</string>
    <string name="hint_newProposalsHow">¿Cómo lo harias?: \nSi no lo sabes puedes dejarlo en blanco
        y otros usuarios te ayudarán en este punto.</string>
    <string name="hint_newProposalsMoney">¿Cómo lo financiarias?: \nSi no lo sabes puedes dejarlo en blanco
        y otros usuarios te ayudarán en este punto.</string>

    <string name="text_proposalsProposal">¿Qué propongo?</string>
    <string name="text_proposalsHow">¿Cómo lo haría?</string>
    <string name="text_proposalsMoney">¿Cómo lo financiaría?</string>
    <string name="text_proposalsOpinion">¿Qué opinas? </string>

    <string name="text_dialogProposalTitle">Debe escribir un Título para su Propuesta.</string>
    <string name="text_dialogProposalText">Debe escribir el enunciado de su Propuesta.</string>
    <string name="title_dialogProposalText">¿Quieres que otros usuarios te ayuden?</string>
    <string name="text_dialogCollaborativeProposal">Si dejas el campo de ¿Cómo lo harías? o de ¿Cómo lo financiarías? sin rellenar
        (quizás porque no lo tienes muy claro) se creará una Propuesta Colaborativa y otros usuarios podrán echarte una mano redactando
        esta parte de tu propuesta. \n\nMaś adelante, una vez que estés de acuerdo con lo que se haya escrito, tu y solo tu podrás cerrar la
        propuesta para hacerla definitiva. ¿Estás de acuerdo?</string>


    <string name="text_helpProposal">Esta parte de la propuesta se encuentra en edicion. El usuario necesita ayuda para redactarla
        ¿Quieres echarle una mano? </string>
    <string name="name_buttonEditWave">Ayudar en su elaboración ></string>

    <string name="text_dialog_downloading">Descargando datos... Espere por favor...</string>
    <string name="text_dialog_uploading">Cargando datos... Espere por favor...</string>

    <string name="text_comment">Deja tu comentario...</string>
    <string name="text_buttonDoComment">Enviar</string>

    <string name="text_listSubsectionsEmpty">No hay Subsecciones</string>

    <string name="name_buttonLike">Me gusta</string>
    <string name="name_buttonDislike">No me gusta</string>
    <string name="name_buttonNotUnderstood">No lo entiendo</string>
    <string name="name_buttonComment">Ver Comentarios</string>

    <string name="name_headerMoreViews">Lo más visto</string>
    <string name="name_headerMoreLikes">Lo que más gusta</string>
    <string name="name_headerMoreDislikes">Lo que menos gusta</string>
    <string name="name_headerMoreNotUnderstood">Lo menos entendido</string>
    <string name="name_headerMoreComments">Lo más comentado</string>

    <string name="name_buttonSaveWave">Guardar Propuesta Definitiva ></string>
    <string name="name_buttonFinishEditWave">Finalizar edición</string>

    <string-array name="TabsProposalsEntries">
        <item>Mis Propuestas</item>
        <item>Por Categorías</item>
        <item>Últimas</item>
        <item>Más Vistas</item>
        <item>Mejor Valoradas</item>
        <item>Más Comentadas</item>
        <item>Incomprendidas</item>
        <item>Peor Valoradas</item>
    </string-array>

    <string-array name="TabsCategorizedProposalsEntries">
        <item>Últimas</item>
        <item>Más Vistas</item>
        <item>Mejor Valoradas</item>
        <item>Más Comentadas</item>
        <item>Incomprendidas</item>
        <item>Peor Valoradas</item>
    </string-array>

    <string-array name="TabsCategoryEntries">
        <item>Secciones</item>
        <item>Propuestas</item>
    </string-array>

    <string-array name="TabsProgramsEntries">
        <item>Partidos Políticos</item>
        <item>Más Vistas</item>
        <item>Mejor Valoradas</item>
        <item>Más Comentadas</item>
        <item>Incomprendidas</item>
        <item>Peor Valoradas</item>
        <item>Por Categorías</item>
    </string-array>

    <string-array name="TabsCollaborateEntries">
        <item>Mis Propuestas</item>
        <item>Últimas</item>
        <item>Por Categorías</item>
    </string-array>

    <string-array name="TabsCategorizedCollaborativeProposalsEntries">
        <item>Últimas</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_proposals">Propuestas</string>
    <string name="title_activity_comparatives">Categorías</string>
    <string name="title_activity_new_proposal">Nueva Propuesta</string>
    <string name="title_activity_programs">Programas</string>
    <string name="title_activity_categorized_proposals"> </string>
    <string name="title_activity_category"> </string>
    <string name="title_activity_proposal_viewer">Propuesta</string>
    <string name="title_activity_favorites">Tus Favoritos</string>
    <string name="title_activity_categorized_programs"> </string>
    <string name="title_activity_collaborate">Prop. Colaborativas</string>
    <string name="title_activity_comments_proposal">Comentarios</string>
    <string name="title_activity_top10">Top10Activity</string>
    <string name="title_activity_parties">Partidos Políticos</string>
    <string name="title_activity_political_program_index">Indice del Programa</string>
    <string name="title_activity_section_viewer">Sección</string>
    <string name="title_activity_comments_section">Comentarios</string>
    <string name="title_activity_collaborative_proposal_viewer">Propuesta Colaborativa</string>
    <string name="title_activity_edit_wave">Editando Propuesta</string>
    <string name="title_activity_categorized_collaborative_proposals"> </string>

</resources>
