<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zorbel.apptfg.proposals.ProposalsActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="*">

            <TableRow>
                <Button
                    android:id="@+id/btn_Health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_health_cross"
                    android:padding="20dp"
                    android:text="@string/categoryHealth"/>

                <Button
                    android:id="@+id/btn_Education"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_education"
                    android:padding="20dp"
                    android:text="@string/categoryEducation"/>
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btn_Employment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_employment"
                    android:padding="20dp"
                    android:text="@string/categoryEmployment"/>

                <Button
                    android:id="@+id/btn_Homes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_houses"
                    android:padding="20dp"
                    android:text="@string/categoryHomes"/>
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btn_Taxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_taxes"
                    android:padding="20dp"
                    android:text="@string/categoryTaxes"/>

                <Button
                    android:id="@+id/btn_Culture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_culture"
                    android:padding="20dp"
                    android:text="@string/categoryCulture"/>
            </TableRow>


            <Button
                android:id="@+id/btn_Others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_others"
                android:padding="20dp"
                android:text="@string/categoryOthers"/>


        </TableLayout>

    </ScrollView>


</RelativeLayout>