<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.zorbel.apptfg.proposals.ProposalsActivity">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:stretchColumns="*">

                <TableRow>

                    <Button
                        android:id="@+id/btn_Health"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/ic_health_cross"
                        android:padding="20dp"
                        android:text="@string/categoryHealth"
                        android:textColor="#4c4c4c"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_Education"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/ic_education"
                        android:padding="20dp"
                        android:text="@string/categoryEducation"
                        android:textColor="#4c4c4c"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/btn_Employment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/ic_employment"
                        android:padding="20dp"
                        android:text="@string/categoryEmployment"
                        android:textColor="#4c4c4c"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_Homes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/ic_houses"
                        android:padding="20dp"
                        android:text="@string/categoryHomes"
                        android:textColor="#4c4c4c"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/btn_Taxes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/ic_taxes"
                        android:padding="20dp"
                        android:text="@string/categoryTaxes"
                        android:textColor="#4c4c4c"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_Culture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/ic_culture"
                        android:padding="20dp"
                        android:text="@string/categoryCulture"
                        android:textColor="#4c4c4c"
                        android:textStyle="bold" />
                </TableRow>


                <Button
                    android:id="@+id/btn_Others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_others"
                    android:padding="20dp"
                    android:text="@string/categoryOthers"
                    android:textColor="#4c4c4c"
                    android:textStyle="bold" />


            </TableLayout>

        </ScrollView>


    </RelativeLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:textStyle="bold" />

</android.support.v4.widget.DrawerLayout>

