<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/table_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow>
                    <Button
                        android:id="@+id/btn_Programs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@mipmap/ic_programs"
                        android:padding="20dp"
                        android:text="@string/btnPrograms"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_Comparatives"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@mipmap/ic_topics"
                        android:padding="20dp"
                        android:text="@string/btnTopics"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>
                    <Button
                        android:id="@+id/btn_Proposals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@mipmap/ic_proposals"
                        android:padding="20dp"
                        android:text="@string/btnProposals"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_Polls"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@mipmap/ic_polls"
                        android:padding="20dp"
                        android:text="@string/btnPolls"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>
        </ScrollView>

    </RelativeLayout>


    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>