<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activityProposalViewerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context="com.example.zorbel.apptfg.programs.SectionViewerActivity">

        <LinearLayout
            android:id="@+id/layoutTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/proposalImage"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

            <TextView
                android:id="@+id/proposalTitle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.7"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/white_pressed"
                fab:fab_icon="@mipmap/ic_starfav_yellow"
                fab:fab_size="mini" />

        </LinearLayout>

        <TextView
            android:id="@+id/proposalCategory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutTitle"
            android:layout_marginBottom="10dp"
            android:gravity="left"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/proposalUser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutTitle"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/proposalDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutTitle"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:textStyle="italic|bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/proposalUser"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textProposal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>

                </ScrollView>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_proposalsHow"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/howProposal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>

                </ScrollView>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_proposalsMoney"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/moneyProposal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>

                </ScrollView>


            </LinearLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@mipmap/ic_greenlike" />

                    <Button
                        android:id="@+id/buttonNotUnderstood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@mipmap/ic_bluenotunderstood" />

                    <Button
                        android:id="@+id/buttonDislike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@mipmap/ic_reddislike" />

                </TableRow>


                <Button
                    android:id="@+id/buttonComment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@mipmap/ic_commentwhite"
                    android:text="@string/name_buttonComment" />

            </TableLayout>

        </LinearLayout>

    </RelativeLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

    <ExpandableListView
        android:id="@+id/right_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>
